Better readability: Bigger text, less info. Also fixed a bug where the meter would report data from a different timestamp.

--- a/f-style.css
+++ b/f-style.css
@@ -1,72 +1,56 @@
 /* kindle browser doesn't support calc(), so I'm using fixed pixel sizes. */
 
 body {
-  font-family: "Questrial";
-  font-weight: bolder;
-  background-color: #000000;
-  color:#ffffff;
+  font-family: "Arvo";
+  background-color: #ffffff;
+  color:#000000;
   padding: 0px;
   margin: 0px;
-}
-
-.bar, .box {
-  border-bottom: 4px solid #dddddd;
-  padding: 20px;
-  margin: 0 0 40px 40px;
-  float: left;
+  overflow: hidden;
 }
 
 .bar {
   width: 638px;
-}
-
-.box {
-  width: 279px;
-}
-
-.header {
-  width: 100%;
-  text-align: center;
-}
-
-.blockheader {
-  width: 100%;
-  padding: 0 0 20px 0;
-  text-align: center;
+  height: 140px;
+  padding: 30px 20px;
+  margin: 0 0 40px 40px;
+  float: left;
+  text-align: right;
+  border-bottom: 8px solid #999999;
+  vertical-align: bottom;
+  white-space: nowrap;
 }
 
 .blockbody {
-  width: 279px;
-  padding: 0 0 20px 0;
-  text-align: center;
-  height: 140px;
-  vertical-align: bottom;
-  display: table-cell;
+  padding: 0 20px;
+  white-space: nowrap;
 }
 
 #main {
   width: 758px;
-  height: 1024px;
   display: block;
-  background-color: #000000;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .text {
-  font-size: 30px;
-  font-weight: normal;
+  font-size: 60px;
+  font-weight: 400;
 }
 
 .accent {
-  font-size: 36px;
-  font-weight: bold;
+  font-size: 72px;
+  font-weight: 700;
 }
 
 .large {
-  font-size: 48px;
-  font-weight: normal;
+  font-size: 100px;
+  font-weight: 400;
 }
 
 .huge {
-  font-size: 72px;
-  font-weight: bold;
+  font-size: 132px;
+  font-weight: 700;
 }
